implementado configuração REST #5

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 ## Logging
+#Server
+server.port=8080
+server.servlet.context-path=/spring-app
+
 # Show sql statement
 logging.level.org.hibernate.SQL=debug
 # Show sql values
