--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,5 @@
 ports:
   - port: 8080
 tasks:
-  - init: mysql < DDL.sql
-  - init: mysql < DML.sql
+  - init: mysql < DDL.sql && mysql < DML.sql
 image: gitpod/workspace-mysql
