--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,6 +2,6 @@ ports:
   - port: 8080
 
 tasks: 
-  - init: mysql < DDL.sql
+  - init: mysql < DDL.sql && mysql < DML.sql
 
 image: gitpod/workspace-mysql
