--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,34 @@ server.error.include-message=always
 logging.level.org.hibernate.SQL=debug
 # Show sql values
 logging.level.org.hibernate.type.descriptor.sql=trace
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/produtora?useTimezone=true&serverTimezone=UTC
-spring.datasource.username = user
-spring.datasource.password = pass123
-## Hibernate Properties
+
+# Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+#spring.datasource.url = jdbc:mysql://localhost:3306/produtora?useTimezone=true&serverTimezone=UTC
+#spring.datasource.username = user
+#spring.datasource.password = pass123
+
+# Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = validate
+#spring.jpa.hibernate.ddl-auto = validate
+
+
+spring.datasource.url=jdbc:mysql://db:3306/produtora
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.name=SpringBootMysqlDataSource
+spring.datasouce.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.datasource.hikari.pool-name=SpringBootMysqlPool
+spring.datasource.hikari.connection-test-query=select now();
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=10000
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
