--- a/appspec.yml
+++ b/appspec.yml
@@ -1,25 +1,9 @@
 version: 0.0
 os: linux
 hooks:
-  ApplicationStop:
-    - location: stop_service.sh
-      timeout: 120
-      runas: root
-    - location: deregister_from_elb.sh
-      timeout: 120
-      runas: root
-  AfterInstall:
-    - location: init.sh
-      timeout: 600
-      runas: root
+  
   ApplicationStart:
-    - location: start_service.sh
+    - location: docker-run.sh
       timeout: 120
       runas: root
-    - location: wait_for_service.sh
-      timeout: 600
-      runas: root
-    - location: register_with_elb.sh
-      timeout: 120
-      runas: root 
 
