--- a/appspec.yml
+++ b/appspec.yml
@@ -1,8 +1,15 @@
 version: 0.0
 os: linux
 hooks:
+  ApplicationStop:
+    - location: stop_service.sh
+      timeout: 120
+      runas: root
+    - location: deregister_from_elb.sh
+      timeout: 120
+      runas: root
   ApplicationStart:
-    - location: docker-run.sh
+    - location: start_service.sh
       timeout: 120
       runas: root
 
