--- a/appspec.yml
+++ b/appspec.yml
@@ -7,11 +7,11 @@ files:
 
 hooks:
   ApplicationStop:
-    - location: scripts/kill_container.sh
+    - location: ./scripts/kill_container.sh
       timeout: 20
       runas: root
   ApplicationBefforeInstall:
-    - location: scripts/load_container.sh
+    - location: ./scripts/load_container.sh
       timeout: 20
       runas: root
   ApplicationStart:
