--- a/appspec.yml
+++ b/appspec.yml
@@ -1,10 +1,9 @@
 version: 0.0
-os: linux
+os: ubuntu
 files:
-  - source:  /
+  - source: /
     destination: /home/ec2-user
     overwrite: true
-
 hooks:
   ApplicationStop:
     - location: scripts/kill_container.sh
@@ -17,4 +16,4 @@ hooks:
   ApplicationStart:
     - location: start_container.sh
       timeout: 30
-      runas: ubuntu
+      runas: root
