--- a/appspec.yml
+++ b/appspec.yml
@@ -10,6 +10,6 @@ hooks:
       timeout: 20
       runas: root
   ApplicationStart:
-    - location: start_container.sh
+    - location: /start_container.sh
       timeout: 30
       runas: root
