--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
         </dependency>
+<!--
+        <dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+		</dependency>-->
 
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
