--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,11 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = validate
 
 
+#liquibase config
+#liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+
+
+
 #spring.datasource.url=jdbc:mysql://db:3306/produtora
 #spring.datasource.username=root
 #spring.datasource.password=
