--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,9 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 #spring.datasource.username = user
 #spring.datasource.password = pass123
 
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+
 # Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
@@ -22,11 +25,14 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 
 
 #liquibase config
-#liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+spring.liquibase.enabled=true
+
+liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+
+spring.h2.console.enabled=true
 
 
 #conexão com docker (container Mysql)
-
 spring.datasource.url=jdbc:mysql://db:3306/produtora
 spring.datasource.username=root
 spring.datasource.password=
