--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,6 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 #spring.datasource.username = user
 #spring.datasource.password = pass123
 
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
 # Hibernate Properties
@@ -49,3 +48,5 @@ spring.datasource.hikari.idle-timeout=10000
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
