--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,7 @@
 
         <dependency>
            <groupId>org.liquibase</groupId>
-            <artifactId>liquibase-maven-plugin</artifactId>
-            <version>3.4.2</version>
+            <artifactId>liquibase-core</artifactId>
         </dependency>
 
         <dependency>
@@ -108,16 +107,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-            <plugin>
-                <groupId>org.liquibase</groupId>
-                <artifactId>liquibase-maven-plugin</artifactId>
-                <configuration>
-                    <propertyFile>src/main/resources/application.properties</propertyFile>
-                    <propertyFileWillOverride>true</propertyFileWillOverride>
-                </configuration>
-            </plugin>
         </plugins>
-
     </build>
 
 
