--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,10 @@ server.port=8080
 server.servlet.context-path=/spring-app
 server.error.include-message=always
 
+## Logging
 # Show sql statement
 logging.level.org.hibernate.SQL=debug
+
 # Show sql values
 logging.level.org.hibernate.type.descriptor.sql=trace
 
@@ -13,23 +15,16 @@ spring.datasource.url = jdbc:mysql://localhost:3306/produtora?useTimezone=true&s
 spring.datasource.username = user
 spring.datasource.password = pass123
 
-
-
 # Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-#spring.jpa.hibernate.ddl-auto = validate
-
+spring.jpa.hibernate.ddl-auto = validate
 
 #liquibase config
-spring.liquibase.enabled=true
-
-spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
-
-#spring.h2.console.enabled=true
-
+#spring.liquibase.enabled=true
+#spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 
 #conexão com docker (container Mysql)
 #spring.datasource.url=jdbc:mysql://db:3306/produtora
